--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cryptography==2.8
 defusedxml==0.6.0
 Django==3.0.2
 django-allauth==0.41.0
+django-cors-headers==3.2.1
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
@@ -19,6 +20,7 @@ Jinja2==2.10.3
 MarkupSafe==1.1.1
 oauthlib==3.1.0
 openapi-codec==1.3.2
+Pillow==7.0.0
 psycopg2==2.8.4
 py-vapid==1.7.0
 pycparser==2.19
