--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==2.8
+cx-Oracle==7.3.0
 defusedxml==0.6.0
 Django==3.0.2
 django-allauth==0.41.0
