--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,16 @@ django-rest-auth==0.9.5
 django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
+et-xmlfile==1.0.1
 http-ece==1.1.0
 idna==2.8
 itypes==1.1.0
+jdcal==1.4.1
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 oauthlib==3.1.0
 openapi-codec==1.3.2
+openpyxl==3.0.3
 Pillow==7.0.0
 psycopg2==2.8.4
 py-vapid==1.7.0
