allow host change

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -2,3 +2,6 @@ packages:
   yum:
     git: []
     postgresql93-devel: []
+option_settings:
+  aws:elasticbeanstalk:container:python:
+    WSGIPath: eeflow/wsgi.py
