--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,14 @@ django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
 et-xmlfile==1.0.1
+gunicorn==20.0.4
 http-ece==1.1.0
 idna==2.8
 itypes==1.1.0
 jdcal==1.4.1
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+mysqlclient==1.3.12
 oauthlib==3.1.0
 openapi-codec==1.3.2
 openpyxl==3.0.3
@@ -39,4 +41,3 @@ six==1.14.0
 sqlparse==0.3.0
 uritemplate==3.0.1
 urllib3==1.25.7
-mysqlclient==1.3.12
