--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
   web:
     build:
       context: ./
-      dockerfile: Dockerfile    
-          
-    command: gunicorn eeflow.wsgi:application --bind 0.0.0.0:8000
+      dockerfile: Dockerfile
+
+    command: gunicorn eeflow.wsgi:application --bind 0.0.0.0:8000 --woker=5
     volumes:
            - static_vol:/code/static/
            - .:/code/
@@ -17,7 +17,7 @@ services:
            - 8000
     env_file:
            - ./.env.prod
-  
+
   nginx:
     build:
       context: ./nginx
