--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       context: ./
       dockerfile: Dockerfile
 
-    command: gunicorn eeflow.wsgi:application --bind 0.0.0.0:8000 --woker=5
+    command: gunicorn --wokers=5 eeflow.wsgi:application --bind 0.0.0.0:8000
     volumes:
            - static_vol:/code/static/
            - .:/code/
