--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,16 @@
-upstream ec2-13-124-234-194.ap-northeast-2.compute.amazonaws.com {
+upstream app {
     server web:8000;
 }
 
 server {
 
     listen 80;
+    
+    client_body_buffer_size     70M;
+    client_max_body_size        70M;  
 
     location / {
-        proxy_pass http://ec2-13-124-234-194.ap-northeast-2.compute.amazonaws.com;
+        proxy_pass http://app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
