debug=false 시 docker, ngnix 설정 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       dockerfile: Dockerfile
     volumes:
           - static_vol:/code/static/
+          - ./media:/code/media/
     ports:
           - 80:80
     depends_on:
