--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,9 +8,9 @@ server {
     
     client_body_buffer_size     70M;
     client_max_body_size        70M;  
-
+ 
     location / {
-        proxy_pass http://app;
+	proxy_pass http://app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
@@ -22,6 +22,11 @@ server {
     }
     
     location /media/ {
-        alias /code/media/;
+	add_header 'Access-Control-Allow-Origin' '*';
+ 	add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+	add_header 'Access-Control-Allow-Headers' 'User-Agent,Keep-Alive,Content-Type';
+	add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+	alias /code/media/;
     }
+
 }
