--- a/.env.prod
+++ b/.env.prod
@@ -1,10 +1,10 @@
-DEBUG=0	
-SECRET_KEY=!+!@7c0#&ng4pa)&y^+m%$m1z_((t*ua1^#skaj0rl1mna7xpg	
-SQL_ENGINE=django.db.backends.mysql	
-SQL_DATABASE=eeflow	
-SQL_USER=admin	
-SQL_PASSWORD=kcfeed12!	
-SQL_HOST=eeflow.c3jvpuxwaake.ap-northeast-2.rds.amazonaws.com	
-SQL_PORT=3306	
+DEBUG=0
+SECRET_KEY=!+!@7c0#&ng4pa)&y^+m%$m1z_((t*ua1^#skaj0rl1mna7xpg
+SQL_ENGINE=django.db.backends.mysql
+SQL_DATABASE=eeflow
+SQL_USER=admin
+SQL_PASSWORD=kcfeed12!
+SQL_HOST=ec2-3-34-137-76.ap-northeast-2.compute.amazonaws.com
+SQL_PORT=3306
 DATABASE=mysql
-ORACLE_IP=112.216.66.219
+ORACLE_IP=59.14.181.10
