--- a/.env.prod
+++ b/.env.prod
@@ -4,7 +4,7 @@ SQL_ENGINE=django.db.backends.mysql
 SQL_DATABASE=eeflow
 SQL_USER=admin
 SQL_PASSWORD=kcfeed12!
-SQL_HOST=ec2-3-34-137-76.ap-northeast-2.compute.amazonaws.com
+SQL_HOST=eeflow.caeqptuecoba.ap-northeast-2.rds.amazonaws.com
 SQL_PORT=3306
 DATABASE=mysql
 ORACLE_IP=59.14.181.10
