--- a/.env.prod
+++ b/.env.prod
@@ -3,8 +3,13 @@ SECRET_KEY=!+!@7c0#&ng4pa)&y^+m%$m1z_((t*ua1^#skaj0rl1mna7xpg
 SQL_ENGINE=django.db.backends.mysql
 SQL_DATABASE=eeflow
 SQL_USER=admin
-SQL_PASSWORD=kcfeed12!
-SQL_HOST=eeflow.caeqptuecoba.ap-northeast-2.rds.amazonaws.com
+SQL_PASSWORD=1q2w3e4ra1!
+SQL_HOST=211.50.55.81
 SQL_PORT=3306
 DATABASE=mysql
-ORACLE_IP=59.14.181.10
+ORACLE_IP=211.50.55.81
+#SQL_PASSWORD=kcfeed12!  #amazonRDS
+#SQL_HOST=eeflow.caeqptuecoba.ap-northeast-2.rds.amazonaws.com   #amazonRDS
+#SQL_PORT=3306
+#DATABASE=mysql
+#ORACLE_IP=59.14.181.10  #infac
